# script-selector

./: .env.example  .gitignore  README.md  asgi.py  b64OMG.bat  docker-compose.prod.yml  docker-compose.yml  prod.Dockerfile  pyproject.toml  settings.py  urls.py  wsgi.py
api/: admin.py  forms.py  models.py  serializers.py  views.py
api/migrations/: 0001_initial.py  0002_alter_script_bat_file_alter_script_name.py  0002_scriptset_script_script_set.py  0003_alter_script_bat_file.py  0004_alter_script_name_alter_scriptset_name.py
api/static/: style.css
api/templates/: home.html
nginx/: nginx.conf  nginx.config
project/: settings.py  urls.py
